# firecash-rusty

./: .gitignore  CONSENSUS-CHANGES.md  CONSENSUS-INHERITED.md  Cargo.toml  OPERATIONS.md  README.md  diagnose.txt
.cargo/: config.toml
.github/workflows/: deploy.yaml
bridge/src/: prom.rs  stratum_listener.rs
components/consensusmanager/src/: session.rs
consensus/: Cargo.toml
consensus/client/src/: header.rs
consensus/core/: Cargo.toml
consensus/core/src/: auxpow.rs  coinbase.rs  header.rs  lib.rs  network.rs  tx.rs
consensus/core/src/api/: mod.rs
consensus/core/src/config/: genesis.rs  params.rs
consensus/core/src/errors/: block.rs  pruning.rs  sync.rs  tx.rs
consensus/core/src/mass/: mod.rs
consensus/pow/: Cargo.toml
consensus/pow/src/: auxpow.rs  lib.rs  wasm.rs
consensus/src/consensus/: mod.rs  services.rs  test_consensus.rs
consensus/src/model/stores/: headers.rs  mod.rs  pruning_meta.rs  shielded.rs
consensus/src/pipeline/body_processor/: body_validation_in_context.rs  processor.rs
consensus/src/pipeline/header_processor/: pre_ghostdag_validation.rs  processor.rs
consensus/src/pipeline/virtual_processor/: processor.rs  tests.rs  utxo_validation.rs
consensus/src/processes/: coinbase.rs  difficulty.rs  mod.rs  parents_builder.rs  shielded.rs  window.rs
consensus/src/processes/pruning_proof/: apply.rs  mod.rs  validate.rs
consensus/src/processes/sync/: mod.rs
consensus/src/processes/transaction_validator/: mod.rs  tx_validation_in_header_context.rs  tx_validation_in_isolation.rs  tx_validation_in_utxo_context.rs
crypto/addresses/src/: bech32.rs  lib.rs  wasm.rs
crypto/hashes/: Cargo.toml
crypto/hashes/src/: hashers.rs  pow_hashers.rs
crypto/txscript/src/: script_class.rs  standard.rs
database/src/: registry.rs
docs/: BUILDING-WINDOWS.md  KASPA-NATIVE-ZK-SHIELDED-POOL.md  KASPA-PRIVACY-ARCHITECTURES.md  NON_CUSTODIAL_WALLET.md  RELEASE_README.txt  archival.md
firecash-api/: Cargo.toml
firecash-api/src/: main.rs
firecash-walletd/: Cargo.toml
firecash-walletd/src/: main.rs
gateway/: README.md
gateway/docs/: ARCHITECTURE.md  STATUS.md
gateway/service/src/: main.rs
kaspad/: Cargo.toml
kaspad/src/: args.rs  daemon.rs
miner/: Cargo.toml
miner/src/: main.rs  merged.rs  solver.rs
mining/: Cargo.toml
mining/errors/src/: mempool.rs
mining/src/: manager_tests.rs
mining/src/mempool/: check_transaction_standard.rs  handle_new_block_transactions.rs  replace_by_fee.rs
mining/src/mempool/model/: transactions_pool.rs  utxo_set.rs
mining/src/testutils/: coinbase_mock.rs  consensus_mock.rs
protocol/flows/src/ibd/: flow.rs  streams.rs
protocol/flows/src/v10/: mod.rs  request_pruning_point_shielded_state.rs
protocol/p2p/proto/: messages.proto  p2p.proto
protocol/p2p/src/convert/: error.rs  header.rs  messages.rs
protocol/p2p/src/core/: payload_type.rs
rpc/core/src/api/: ops.rs  rpc.rs
rpc/core/src/model/: header.rs  message.rs  tests.rs
rpc/core/src/model/optional/: header.rs
rpc/grpc/client/src/: lib.rs
rpc/grpc/core/proto/: messages.proto  rpc.proto
rpc/grpc/core/src/: ops.rs
rpc/grpc/core/src/convert/: header.rs  kaspad.rs  message.rs  tx.rs
rpc/grpc/server/src/request_handler/: factory.rs
rpc/service/src/: service.rs
rpc/wrpc/server/src/: service.rs
sdk/: README.md
sdk/bindings/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/bindings/typescript/src/: client.test.ts  client.ts  index.ts  signer.ts  types.ts
sdk/core/: Cargo.toml
sdk/core/examples/: payment_plan.rs  sign_prepared_payment.rs
sdk/core/src/: address.rs  chain.rs  engine.rs  lib.rs  network.rs  prepared.rs  store.rs
sdk/docs/: ARCHITECTURE.md  RESEARCH.md  STATUS.md  USAGE.md
sdk/signer/: Cargo.toml
sdk/signer/src/: lib.rs
sdk/wallet-engine/: Cargo.toml
sdk/wallet-engine/src/: lib.rs  payment.rs
shielded-core/: Cargo.toml
shielded-core/src/: account.rs  bundle.rs  coinbase.rs  commitment.rs  lib.rs  message.rs  nullifier.rs  payment_check.rs  state.rs  tree.rs  turnstile.rs  verify.rs  wallet.rs  walletdb.rs
shielded-pay/: Cargo.toml
shielded-pay/src/: main.rs
shielded-wallet/: Cargo.toml
shielded-wallet/src/: effects.rs  lib.rs  tx.rs
testing/integration/: Cargo.toml
testing/integration/src/: consensus_integration_tests.rs  daemon_integration_tests.rs  rpc_tests.rs
testing/integration/testdata/params/: shielded_ibd_sync_test_params.json
zkas-api/: Cargo.toml
zkas-api/src/: main.rs
zkas-walletd/: Cargo.toml
zkas-walletd/examples/: find_address.rs
zkas-walletd/src/: lib.rs  main.rs  selfhost.rs
