[package]
name = "kaspad"
description = "Kaspa full node daemon"
keywords = ["kaspa", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kaspad_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

kaspa-addresses.workspace = true
kaspa-addressmanager.workspace = true
kaspa-build-info.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensus-notify.workspace = true
kaspa-consensus.workspace = true
kaspa-consensusmanager.workspace = true
kaspa-core.workspace = true
kaspa-database.workspace = true
kaspa-grpc-server.workspace = true
kaspa-hashes.workspace = true
kaspa-index-processor.workspace = true
kaspa-mining.workspace = true
kaspa-notify.workspace = true
kaspa-p2p-flows.workspace = true
kaspa-p2p-lib.workspace = true
kaspa-p2p-mining.workspace = true
kaspa-perf-monitor.workspace = true
kaspa-rpc-core.workspace = true
kaspa-rpc-service.workspace = true
kaspa-system-info.workspace = true
kaspa-txscript.workspace = true
kaspa-utils.workspace = true
kaspa-utils-tower.workspace = true
kaspa-utxoindex.workspace = true
kaspa-wrpc-server.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["env"]}
dhat = { workspace = true, optional = true }
dirs.workspace = true
futures-util.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
serde_json.workspace = true

toml = "0.8.10"
serde_with = "3.7.0"

# Embedded self-hosting wallet API (`--wallet-api`): lets one node be the whole wallet
# backend for a phone — TLS + pairing QR, no reverse proxy. Optional so a minimal node
# build can drop the wallet engine (Halo2 prover) it pulls in.
zkas-walletd = { path = "../zkas-walletd", optional = true }

[features]
default = ["wallet-api"]
wallet-api = ["dep:zkas-walletd"]
heap = ["dhat", "kaspa-alloc/heap"]
devnet-prealloc = ["kaspa-consensus/devnet-prealloc"]
semaphore-trace = ["kaspa-utils/semaphore-trace"]

[lints]
workspace = true
