[package]
name = "kaspa-mining"
description = "Kaspa mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensusmanager.workspace = true
kaspa-core.workspace = true
kaspa-hashes.workspace = true
kaspa-mining-errors.workspace = true
kaspa-muhash.workspace = true
# Shielded-tx nullifier extraction for mempool double-spend detection (no proving
# circuit needed — just wire-format parsing of the bundle in the tx payload).
kaspa-shielded-core.workspace = true
kaspa-txscript.workspace = true
kaspa-utils.workspace = true
hex.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
sweep-bptree = "0.4.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
kaspa-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
