[package]
name = "kaspa-shielded-core"
description = "firecash shielded pool core: Orchard note-commitment tree, nullifier set, turnstile invariant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Enables Halo 2 proof verification (the `verify` module's circuit path, single
# + batch). Pulls halo2_proofs via orchard plus the batch/reconstruction deps;
# kept opt-in so non-verifying consumers stay light.
circuit = ["orchard/circuit", "orchard/multicore", "dep:nonempty"]

[dependencies]
# Orchard primitives (Halo 2 / Pasta). `circuit` (halo2_proofs) is enabled via
# this crate's `circuit` feature, which the consensus verifier turns on.
orchard = { version = "0.14", default-features = false, features = ["std"] }
# Must match the incrementalmerkletree version Orchard links, so that
# `MerkleHashOrchard: incrementalmerkletree::Hashable` is the same trait.
# `legacy-api` provides CommitmentTree / IncrementalWitness, the wallet-side
# witness tracking a real wallet needs (PLAN §2.9, `walletdb`).
incrementalmerkletree = { version = "0.8.1", features = ["legacy-api"] }
# For the persisted frontier snapshot (FrontierState). incrementalmerkletree's
# Frontier is not serde-serializable, so we persist a representation we control.
serde = { workspace = true, features = ["derive"] }
# Curve point handling for the encoding consensus rules (non-identity epk).
# Versions are pinned to match what Orchard 0.14 links.
group = "0.13"
pasta_curves = "0.5"
# Shielded-transaction sighash.
blake2b_simd = { workspace = true }
# Bundle reconstruction (batch verification) — enabled by the `circuit` feature.
nonempty = { version = "0.11", default-features = false, optional = true }
# RNG for RedPallas signing (message signatures + circuit proving). Non-optional:
# `message` signing is available without the heavy `circuit` feature.
rand = { workspace = true }
# Note decryption for wallet scanning (the receive side). Must match the version
# Orchard links so the OrchardDomain types agree.
zcash_note_encryption = "0.4"
# Human-facing shielded (Orchard) address encoding for the wallet facade
# (Version::ShieldedOrchard, firecash: HRP). kaspa-addresses is a leaf crate, so
# no dependency cycle with the consensus layer that depends on shielded-core.
kaspa-addresses.workspace = true
