[package]
name = "zkas-api"
description = "ZKas explorer backend: translates the node's gRPC into the REST + shielded-pool API the ZKas explorer frontend consumes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "zkas-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Shielded (Orchard) address formatting for transaction output addresses.
kaspa-addresses.workspace = true
# gRPC transport to a running kaspad (ZKas) node.
kaspa-grpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-consensus-core.workspace = true
kaspa-core.workspace = true
# Shielded bundle decoding for the shielded-pool aggregation.
kaspa-shielded-core = { workspace = true }

axum = "0.7"
tower-http = { version = "0.5.2", features = ["cors"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log.workspace = true
clap.workspace = true
