[package]
name = "zkas-signer"
description = "Key custody and anti-blind payment authorization for the ZKas SDK"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kaspa-shielded-core.workspace = true
orchard = { version = "=0.14.0", default-features = false, features = ["std"] }
rand.workspace = true
zeroize.workspace = true
